updated faq ios

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -134,7 +134,7 @@
         </div>
         <hr>
 
-        <h4>Hoe download ik de app?</h4>
+        <h4>Hoe installeer ik de StandBy IOS app?</h4>
         <iframe width="560" height="315" src="//www.youtube.com/embed/7eKXip3eppE" frameborder="0" allowfullscreen></iframe>
         <br/><br/><br/>
 
@@ -180,11 +180,7 @@
         <hr>
 
         <h4>Hoe download ik de app?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
 
         <!--<h4>Hoe weet ik welke versie van de app ik gebruik?</h4>-->
@@ -197,23 +193,23 @@
         <!--<br/>-->
 
         <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
 
         <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
 
         <h4>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
 
         <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
 
         <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
         <br/>
       </div>
       <!-- end androidTab -->
