toggle functionality for download manual button

--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -1,6 +1,7 @@
 <div class="page-header">
   <h2>{{ui.help.header}}</h2>
-  <div class="btn-group pull-right">
+  <div class="btn-group pull-right"
+       ng-show="(config.profile.meta=='knrm')">
     <a href="../docs/manual.pdf"
        target="_blank"
        class="btn btn-success">
