--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -28,10 +28,11 @@
             ng-click="setViewTo('ios')"><span class="entypo">&#128241;</span> IOS</a>
       </li>
 
-      <li class="{{(views.android==true) && 'active'}}">
-        <a  href="help#androidTab"
-            data-toggle="tab"
-            ng-click="setViewTo('android')"><span class="entypo">&#128241;</span> Android</a>
+      <li class="disabled {{(views.android==true) && 'active'}}">
+        <!--<a  href="help#androidTab"-->
+            <!--data-toggle="tab"-->
+            <!--ng-click="setViewTo('android')"><span class="entypo">&#128241;</span> Android</a>-->
+        <a  href=""><span class="entypo">&#128241;</span> Android</a>
       </li>
 
     </ul>
@@ -54,8 +55,8 @@
         <hr>
 
         <h4>Hoe zet ik mezelf snel op niet beschikbaar voor de komende 24 uur?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/WvJrUboUt5Q" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zet ik mezelf voor alle weekenden op beschikbaar?</h4>
         <p>Video wordt binnenkort gepubliceerd.</p>
