--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -257,7 +257,9 @@
 
               <div class="sa-member-card">
                 <h5>
-                  <a href="#/profile/{{member.id}}#profile">{{member.name | toTitleCase}}</a>
+                  <a href="#/profile/{{member.id}}#profile">
+                    {{member.name | toTitleCase}}
+                  </a>
                 </h5>
                 <hr/>
                 <span>{{states[member.state].label}}</span>
