new functionality of showing a multiselect box for profile edit form & some other cleanups

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -139,6 +139,23 @@
           </div>
 
           <div class="control-group">
+            <!--<label class="control-label">{{ui.groups.firstName}}</label>-->
+            <label class="control-label">Groups</label>
+            <!--<p>{{groups}}</p>-->
+            <div class="controls">
+              <select data-placeholder=" "
+                      multiple
+                      class="chzn-select"
+                      style="width:530px"
+                      chosen
+                      ng-model="profilemeta.groups"
+                      ng-options="group.name for group in availableGroups">
+              </select>
+              <p ng-repeat="group in profilemeta.groups"><strong>{{group.uuid}}</strong></p>
+            </div>
+          </div>
+
+          <div class="control-group">
             <label class="control-label">{{ui.groups.firstName}}</label>
             <div class="controls">
               <input  type="text"
