logo added to password forgot view

--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -113,7 +113,11 @@
 
 		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.resetPassword}}</button>
 		  <p><small><a ng-click="views.login=true; views.forgot=false">{{ui.login.returnLogin}}</a></small></p>
-		  <span class="version"><a href="version.html" target="_blank">StandBy v{{config.version}}</a></span>
+
+      <img src="img/standby_logo_small.png" alt="StandBy Logo"/>
+		  <span class="version">
+        <a href="version.html" target="_blank">StandBy v{{config.version}}</a>
+      </span>
 		</form>
 	</div>
 	<!-- end remember login -->
