completed group setting functionality for profile edit view

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -151,7 +151,7 @@
                       ng-model="profilemeta.groups"
                       ng-options="group.name for group in availableGroups">
               </select>
-              <p ng-repeat="group in profilemeta.groups"><strong>{{group.uuid}}</strong></p>
+              <!--<p ng-repeat="group in profilemeta.groups"><strong>{{group.uuid}}</strong></p>-->
             </div>
           </div>
 
