name converted to first with last names

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -3,7 +3,7 @@
 
 
 <div class="page-header">
-  <h2>{{data.resources.name}}</h2>
+  <h2>{{data.resources.firstName}} {{data.resources.lastName}}</h2>
 </div>
 
 
