faq updated with new videos in web section

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -58,37 +58,37 @@
         <iframe width="560" height="315" src="//www.youtube.com/embed/WvJrUboUt5Q" frameborder="0" allowfullscreen></iframe>
         <br/><br/><br/>
 
-        <h4>Hoe zet ik mezelf voor alle weekenden op beschikbaar?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe zet ik mezelf voor elk weekend op beschikbaar?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/W-aV3cELuGQ" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe zie ik de beschikbaarheid voor de komende week?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe bekijk ik mijn beschikbaarheid voor de volgende week?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/2GsGyi6YR1Q" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe krijg ik een nieuwe wachtwoord als ik het ben vergeten?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe krijg ik een nieuw wachtwoord als ik het ben vergeten?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/WyQvuG1xx2w" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe controleer ik of er een tekort dreigt in mijn groep(en)?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/FgJhLnubWEg" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe verander ik mijn persoonlijke informatie (bijv. telefoonnummer of wachtwoord)?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/1r_IKDyOLfY" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe stuur ik een bericht (SMS & email) naar andere collega's of groepen?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe stuur ik een bericht naar collega's of groepen?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/aEKbWuYRjqM" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe stel ik de taal in van de StandBy Web app?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe stel ik de taal in StandBy in?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/-vllVFnaXeQ" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe stel ik een standaard groep in voor de Agenda Tab?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <h4>Hoe stel ik in de Agenda een standaard groep in?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/K8NsoyF1cl0" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <section ng-show="app.resources.role == 1">
           <div class="tab-header">
@@ -96,29 +96,25 @@
           </div>
           <hr>
 
-          <h4>Hoe kan ik de beschikbaarheid van een collega inzien?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
-
-          <h4>Hoe kan ik de beschikbaarheid van een collega wijzigen?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
+          <h4>Hoe kan ik de beschikbaarheid van een collega inzien en wijzigen?</h4>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/zlxMuFHlxIM" frameborder="0" allowfullscreen></iframe>
+          <br/><br/><br/>
 
           <h4>Hoe maak ik een nieuwe gebruiker aan?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/ISXhqAW2ywk" frameborder="0" allowfullscreen></iframe>
+          <br/><br/><br/>
 
-          <h4>Hoe voeg ik iemand toe aan een groep?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
+          <h4>Hoe voeg ik een gebruiker toe aan een groep en/of hoe pas ik dit aan?</h4>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/UpcJdi2eOgM" frameborder="0" allowfullscreen></iframe>
+          <br/><br/><br/>
 
           <h4>Hoe verwijder ik iemand uit een groep?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/5c0-g208j-E" frameborder="0" allowfullscreen></iframe>
+          <br/><br/><br/>
 
-          <h4>Hoe verwijders ik iemand uit het systeem?</h4>
-          <p>Video wordt binnenkort gepubliceerd.</p>
-          <br/>
+          <h4>Hoe verwijder ik een gebruiker uit Standby?</h4>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/e6kURIR6LQE" frameborder="0" allowfullscreen></iframe>
+          <br/><br/><br/>
         </section>
 
       </div>
