Add Android faq section

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -28,11 +28,10 @@
             ng-click="setViewTo('ios')"><span class="entypo">&#128241;</span> IOS</a>
       </li>
 
-      <li class="disabled {{(views.android==true) && 'active'}}">
-        <!--<a  href="help#androidTab"-->
-            <!--data-toggle="tab"-->
-            <!--ng-click="setViewTo('android')"><span class="entypo">&#128241;</span> Android</a>-->
-        <a  href=""><span class="entypo">&#128241;</span> Android</a>
+      <li class="{{(views.android==true) && 'active'}}">
+        <a  href="help#androidTab"
+            data-toggle="tab"
+            ng-click="setViewTo('android')"><span class="entypo">&#128241;</span> Android</a>
       </li>
 
     </ul>
@@ -176,38 +175,32 @@
         </div>
         <hr>
 
-        <h4>Hoe download ik de app?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <h4>Hoe installeer ik de StandBy Android app?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/1L82fHvAkpc" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <!--<h4>Hoe weet ik welke versie van de app ik gebruik?</h4>-->
-        <!--<iframe width="560"-->
-                <!--height="315"-->
-                <!--src="//www.youtube.com/embed/fepUaXchGAc"-->
-                <!--frameborder="0"-->
-                <!--allowfullscreen></iframe>-->
-        <!--<p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>-->
-        <!--<br/>-->
+        <h4>Hoe weet ik welke versie van de app ik gebruik?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/ykLd2EG5nRY" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <h4>Hoe zet ik mijzelf voor de komende 6 uur op niet beschikbaar?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/iuX3zcmkN7g" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <h4>Hoe zet ik mijzelf elke dinsdag tussen 17:00 en 23:00 uur beschikbaar?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/SBx3y925uK8" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
-        <h4>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <h4>Hoe stuur ik een bericht naar alle collega's in een groep?</h4>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/ivgkBnpwwS4" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/IDP6fg8TIT8" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
-        <p>Video wordt binnenkort gepubliceerd bij de volgende android app v1.2.0 release.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/exgsLkThN_c" frameborder="0" allowfullscreen></iframe>
       </div>
       <!-- end androidTab -->
 
