--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -148,10 +148,10 @@
                       class="chzn-select"
                       style="width:530px"
                       chosen
-                      ng-model="profilemeta.groups"
+                      ng-model="userGroups"
                       ng-options="group.name for group in availableGroups">
               </select>
-              <!--<p ng-repeat="group in profilemeta.groups"><strong>{{group.uuid}}</strong></p>-->
+              <!--<p ng-repeat="group in userGroups"><strong>{{group.uuid}}</strong></p>-->
             </div>
           </div>
 
