--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -4,6 +4,10 @@
 <div class="page-header">
   <h2>Dashboard</h2>
   <br/>
+
+  <!--<br/>-->
+  <!--<br/>-->
+  <!--<button class="btn btn-danger" ng-click="breakGroupSetting()">Break it!</button>-->
 </div>
 <!-- end page header -->
 
