hot fix for disappearing groups menu item when clicking n profile menu item

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -5,9 +5,9 @@
   <h2>Dashboard</h2>
   <br/>
 
-  <!--<br/>-->
-  <!--<br/>-->
-  <!--<button class="btn btn-danger" ng-click="breakGroupSetting()">Break it!</button>-->
+  <br/>
+  <br/>
+  <button class="btn btn-danger" ng-click="breakGroupSetting()">Break it!</button>
 </div>
 <!-- end page header -->
 
