--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -162,7 +162,7 @@
               <select
                 ng-model="profileRole"
                 ng-options="id as label for (id, label) in roles">
-                <option value="">-- {{ui.profile.choose}} --</option>
+                <!--<option value="3">-- {{ui.profile.choose}} --</option>-->
               </select>
             </div>
           </div>
