--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -207,23 +207,23 @@
             </div>
             <hr>
 
-            <!--<div class="control-group">-->
-              <!--<label class="control-label">{{ui.groups.firstName}}</label>-->
-              <!--<div class="controls">-->
-                <!--<input  type="text"-->
-                        <!--class="span4"-->
-                        <!--ng-model="memberForm.firstName">-->
-              <!--</div>-->
-            <!--</div>-->
+            <div class="control-group">
+              <label class="control-label">{{ui.groups.firstName}}</label>
+              <div class="controls">
+                <input  type="text"
+                        class="span4"
+                        ng-model="memberForm.firstName">
+              </div>
+            </div>
 
-            <!--<div class="control-group">-->
-              <!--<label class="control-label">{{ui.groups.lastName}}</label>-->
-              <!--<div class="controls">-->
-                <!--<input  type="text"-->
-                        <!--class="span4"-->
-                        <!--ng-model="memberForm.lastName">-->
-              <!--</div>-->
-            <!--</div>-->
+            <div class="control-group">
+              <label class="control-label">{{ui.groups.lastName}}</label>
+              <div class="controls">
+                <input  type="text"
+                        class="span4"
+                        ng-model="memberForm.lastName">
+              </div>
+            </div>
 
             <div class="control-group">
               <label class="control-label">{{ui.groups.email}}</label>
